--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,9 +7,8 @@ jobs:
       name: node/default
     steps:
       - checkout
-      - node:
+      - node/install-packages:
           steps:
-            - run: npm install
             - run: npm run build
             - run: npm test
 workflows:
