--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,7 @@ jobs:
             - run: npm install
             - run: npm run build
             - run: npm test
+            - run: bash <(curl -s https://codecov.io/bash)
 workflows:
     build-and-test:
       jobs:
