--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "apollo-boost": "0.4.9",
     "apollo-server-express": "2.13.1",
     "axios": "0.19.2",
+    "dotenv": "^8.2.0",
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.2",
     "firebase": "7.14.5",
     "firebaseui": "4.5.0",
     "graphql": "15.0.0",
+    "mongodb": "^3.5.7",
     "node-sass": "4.14.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
