--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "eslint-fix": "eslint src --fix"
+    "eslint-fix": "eslint src --fix",
+    "email-trigger": "node api/_utils/email/trigger.js"
   },
   "eslintConfig": {
     "extends": "react-app"
