Fixes and Add Form

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,7 @@
-# Rename this to .env and remove comments (#) and add Values
+#### Rename this to .env and remove comments (#) and add Values
 # SASS_PATH=node_modules:src
 # MONGODB_URI=mongodb://username:password@mlab.com:23714/db_name
+
+#### Not Mandatory
 # SENDGRID_TOKEN=SG.ABC
+# APOLLO_ANALYTICS_KEY=service:loan-man:xyz
