--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "node-sass": "4.14.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-hook-form": "^5.7.2",
     "react-redux": "7.2.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "3.4.1",
@@ -54,5 +55,5 @@
     "concurrently": "5.2.0",
     "nodemon": "2.0.4"
   },
-  "proxy": "http://localhost:4000"
+  "proxy": "http://localhost:8080"
 }
