--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,9 +9,19 @@ jobs:
       - checkout
       - node/install-packages
       - run:
-          command: npm install -g yarn
+          command: curl -o- -L https://yarnpkg.com/install.sh | bash
+      - restore_cache:
+          name: Restore Yarn Package Cache
+          keys:
+            - yarn-packages-{{ checksum "yarn.lock" }}
       - run:
-          command: yarn install
+          name: Install Dependencies
+          command: yarn install --frozen-lockfile
+      - save_cache:
+          name: Save Yarn Package Cache
+          key: yarn-packages-{{ checksum "yarn.lock" }}
+          paths:
+            - ~/.cache/yarn
       - run:
           command: yarn build
       - run:
