--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,34 +1,25 @@
-version: 2.1
-orbs:
-  node: circleci/node@latest
 jobs:
   build-and-test:
     executor:
       name: node/default
+      tag: '13'
     steps:
       - checkout
-      - node/install-packages
-      - run:
-          command: curl -o- -L https://yarnpkg.com/install.sh | bash
-      - restore_cache:
-          name: Restore Yarn Package Cache
-          keys:
-            - yarn-packages-{{ checksum "yarn.lock" }}
-      - run:
-          name: Install Dependencies
-          command: yarn install --frozen-lockfile
-      - save_cache:
-          name: Save Yarn Package Cache
-          key: yarn-packages-{{ checksum "yarn.lock" }}
-          paths:
-            - ~/.cache/yarn
+      - node/install-packages:
+          pkg-manager: yarn
       - run:
           command: yarn build
+          name: Build Everything
       - run:
           command: yarn test -- --coverage
+          name: Run Tests with Coverage
       - run:
           command: bash <(curl -s https://codecov.io/bash)
+          name: Upload Coverage
+orbs:
+  node: 'circleci/node@3.0.0'
+version: 2.1
 workflows:
-    build-and-test:
-      jobs:
-        - build-and-test
+  test_my_app:
+    jobs:
+      - build-and-test
