--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "node-sass": "4.14.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-hook-form": "^5.7.2",
     "react-redux": "7.2.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "3.4.1",
@@ -33,7 +34,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "eslint-fix": "eslint src --fix",
-    "email-trigger": "node api/_utils/email/trigger.js"
+    "email-trigger": "node api/_utils/email/trigger.js",
+    "storybook": "start-storybook -p 9009 -s public",
+    "build-storybook": "build-storybook -s public"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -51,8 +54,22 @@
     ]
   },
   "devDependencies": {
+    "@storybook/addon-actions": "^5.3.19",
+    "@storybook/addon-links": "^5.3.19",
+    "@storybook/addons": "^5.3.19",
+    "@storybook/preset-create-react-app": "^3.0.0",
+    "@storybook/preset-scss": "^1.0.2",
+    "@storybook/react": "^5.3.19",
     "concurrently": "5.2.0",
-    "nodemon": "2.0.4"
+    "css-loader": "^3.5.3",
+    "nodemon": "2.0.4",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.2.1"
   },
-  "proxy": "http://localhost:4000"
+  "proxy": "http://localhost:8080",
+  "jest": {
+    "coveragePathIgnorePatterns": [
+      ".stories.js"
+    ]
+  }
 }
